# gourd

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  bin  build.rs  build_builtin_examples.rs  gourd-wrapper  gourd.toml  hi.rs
.github/workflows/: draft.yml  main.yml  nightly.yml  ready.yml  release.yml
.gitlab/issue_templates/: sprint_item.md
.gitlab/merge_request_templates/: usethis.md
.hooks/: commit-msg  pre-commit  pre-push
docs/maintainer/: building.tex  compile.sh  future_work.tex  maintainer.tex  pipeline.tex  preamble.tex  title.tex
docs/maintainer/architecture/: section.tex
docs/maintainer/contributing/: section.tex
docs/maintainer/src/: main.tex  preamble.tex
docs/maintainer/src/architecture/: section.tex
docs/maintainer/src/contributing/: section.tex
docs/maintainer/src/version-history/: definitions.tex  section.tex
docs/maintainer/version-history/: definitions.tex  section.tex
docs/user/: compile-html.sh  compile.sh  gourd-tutorial.7.tex  gourd-tutorial.tex  gourd.1.tex  gourd.conf.man  gourd.man  gourd.tex  gourd.toml.5.tex  gourd.toml.tex  latex2man.trans  latex2man_styling.tex
docs/user/html/: manpage.css  postamble.html  preamble.html
gourd_init_examples/a-simple-experiment/: gourd.toml  program.rs
src/: afterscript.rs  cli.rs  config.rs  constants.rs  error.rs  experiment.rs  file_system.rs  main.rs  measurement.rs  resources.rs  shared.rs  wrapper.rs  wrapper_binary.rs
src/cli/: def.rs  mod.rs  printing.rs  process.rs
src/experiments/: mod.rs
src/gourd/: chunks.rs  main.rs  test_utils.rs
src/gourd/analyse/: mod.rs
src/gourd/analyse/tests/: mod.rs
src/gourd/cli/: def.rs  log.rs  mod.rs  printing.rs  process.rs  rerun.rs
src/gourd/cli/tests/: printing.rs
src/gourd/experiments/: dfs.rs  mod.rs  run.rs
src/gourd/experiments/tests/: mod.rs
src/gourd/experiments/tests/test_resources/: config_afterscript.toml  config_afterscript_error.toml  config_correct_local.toml  config_correct_slurm.toml  config_id_testing.toml  config_latest_experiment.toml  config_no_limits.toml  config_no_slurm.toml  config_postprocess_job.toml  config_postprocess_job_error.toml
src/gourd/init/: builtin_examples.rs  git.rs  interactive.rs  mod.rs  template.rs
src/gourd/init/tests/: mod.rs
src/gourd/local/: mod.rs  runner.rs
src/gourd/local/test_resources/: fibonacci.rs
src/gourd/local/tests/: runner.rs
src/gourd/post/: afterscript.rs  labels.rs  mod.rs  postprocess_job.rs
src/gourd/post/tests/: afterscript.rs  mod.rs  postprocess_job.rs
src/gourd/rerun/: checks.rs  mod.rs  runs.rs  slurm.rs  status.rs
src/gourd/rerun/tests/: checks.rs
src/gourd/resources/: mod.rs  network.rs
src/gourd/resources/tests/: mod.rs  network.rs
src/gourd/setlim/: mod.rs
src/gourd/setlim/tests/: mod.rs
src/gourd/slurm/: checks.rs  chunk.rs  handler.rs  interactor.rs  mod.rs
src/gourd/slurm/tests/: checks.rs  chunk.rs  handler.rs  interactor.rs
src/gourd/status/: chunks.rs  fs_based.rs  mod.rs  printing.rs  slurm_based.rs  slurm_files.rs
src/gourd/status/tests/: chunks.rs  mod.rs  slurm_based.rs
src/gourd/wrapper/: check_binary_linux.rs  check_binary_macos.rs  mod.rs
src/gourd/wrapper/tests/: mod.rs
src/gourd/wrapper/tests/test_resources/: num_returner.rs  panic_returner.rs
src/gourd_lib/: afterscript.rs  config.rs  constants.rs  error.rs  experiment.rs  file_system.rs  lib.rs  measurement.rs  network.rs  test_utils.rs
src/gourd_lib/config/: duration.rs  fetching.rs  maps.rs  mod.rs  parameters.rs  regex.rs  slurm.rs
src/gourd_lib/config/tests/: maps.rs  mod.rs  parameters.rs
src/gourd_lib/experiment/: chunks.rs  inputs.rs  labels.rs  mod.rs  programs.rs  scheduling.rs
src/gourd_lib/resources/: mod.rs
src/gourd_lib/tests/: config.rs  file_system.rs  network.rs
src/gourd_wrapper/: main.rs  measurement_unix.rs
src/integration/: afterscript.rs  analyse.rs  example.rs  init.rs  init_example.rs  init_interactive.rs  mod.rs  rerun.rs  run.rs  version.rs  versioning.rs  workflow.rs
src/integration/test_resources/: fast_fib.rs  fibonacci.rs  hello.rs  slow_fib.rs  slowfib.rs
src/lib/: config.rs  constants.rs  error.rs  measurement.rs
src/local/: mod.rs  runner.rs
src/resources/: build_builtin_examples.rs  install.sh  logo.ascii  mod.rs
src/resources/gourd_init_examples/a_simple_experiment/: gourd.toml
src/resources/gourd_init_examples/fibonacci-comparison/: fibonacci  fibonacci-dynamic.rs  fibonacci.rs  gourd.toml
src/resources/gourd_init_examples/grid-search/: 3dspace.rs  gourd.toml
src/slurm/: checks.rs  handler.rs  info.rs  interactor.rs  mod.rs
src/status/: fs_based.rs  mod.rs
src/tests/: afterscript.rs  config.rs  mod.rs  printing.rs  resources.rs  runner.rs  slurm.rs  wrapper.rs
src/tests/examples/: fibonacci.rs
src/tests/resources/: fibonacci.rs  x86_64_pre_programmed.rs
src/wrapper/: mod.rs
